[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yabetoo-sdk"
version = "0.1.0"
description = "Yabetoo Python SDK"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Yabetoo" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/yabetoo/sdk-py"
Source = "https://github.com/yabetoo/sdk-py"