[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yabetoo-sdk"
version = "0.1.0"
description = "Yabetoo Python SDK"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Yabetoo" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yabetoo/sdk-py"
Source = "https://github.com/yabetoo/sdk-py"